ADD_SUBDIRECTORY( bindings )

FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../include/IECoreAlembic/*.h" "../../include/IECoreAlembic/*.inl" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )
SET( THIS_LIBS
     IECore
     ${CORTEX_ALEMBIC_LIBS}
     ${Boost_LIBRARIES}
     ${CORTEX_ILMBASE_LIBS}
     ${CORTEX_OPENEXR_LIBS}
     ${CORTEX_TBB_LIBS}
     ${ZLIB_LIBRARIES} )

IF( BUILD_STATIC_LIBS )
  ADD_LIBRARY( IECoreAlembic STATIC ${SOURCE_FILES} )
ELSE()
  ADD_LIBRARY( IECoreAlembic SHARED ${SOURCE_FILES} )
ENDIF()

TARGET_LINK_LIBRARIES( IECoreAlembic ${THIS_LIBS} )

INSTALL( TARGETS IECoreAlembic
         DESTINATION lib
         ARCHIVE DESTINATION lib )

INSTALL( FILES ${H_FILES}
         DESTINATION include/IECoreAlembic )
