FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../../include/IECoreAlembic/bindings/*.h" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB PY_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../../python/IECoreAlembic/*.py" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreAlembic
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECoreAlembic MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
  SET_TARGET_PROPERTIES( _IECoreAlembic PROPERTIES SUFFIX ".pyd" )
ELSE ()
  SET_TARGET_PROPERTIES( _IECoreAlembic PROPERTIES PREFIX "" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECoreAlembic ${THIS_LIBS} )

INSTALL( TARGETS _IECoreAlembic
         LIBRARY DESTINATION python/IECoreAlembic )

INSTALL( FILES ${PY_FILES}
         DESTINATION python/IECoreAlembic )
