FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} )

SET( THIS_LIBS
     IECoreAppleseed )

ADD_LIBRARY( appleseedOutputDriver MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( appleseedOutputDriver PROPERTIES OUTPUT_NAME ieDisplay )
SET_TARGET_PROPERTIES( arnoldOutputDriver PROPERTIES PREFIX "" )

TARGET_LINK_LIBRARIES( appleseedOutputDriver ${THIS_LIBS} )

INSTALL( TARGETS appleseedOutputDriver
         LIBRARY DESTINATION appleseedDisplays )
