FILE( GLOB H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../../include/IECoreArnold/bindings/*.h" )

FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

FILE( GLOB PY_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../../../python/IECoreArnold/*.py" )

SET( SOURCE_FILES ${CXX_FILES} ${H_FILES} )

SET( THIS_LIBS
     IECore
     IECorePython
     IECoreArnold
     ${Boost_LIBRARIES}
     ${ILMBASE_LIBRARIES}
     ${OPENEXR_LIBRARIES}
     ${TBB_LIBRARIES}
     ${ZLIB_LIBRARIES} )

ADD_LIBRARY( _IECoreArnold MODULE ${SOURCE_FILES} )

IF ( WINDOWS )
  SET_TARGET_PROPERTIES( _IECoreArnold PROPERTIES SUFFIX ".pyd" )
ELSE ()
  SET_TARGET_PROPERTIES( _IECoreArnold PROPERTIES PREFIX "" )
ENDIF ()

TARGET_LINK_LIBRARIES( _IECoreArnold ${THIS_LIBS} )

INSTALL( TARGETS _IECoreArnold
         LIBRARY DESTINATION python/IECoreArnold )

INSTALL( FILES ${PY_FILES}
         DESTINATION python/IECoreArnold )
