FILE( GLOB CXX_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" )

SET( SOURCE_FILES ${CXX_FILES} )

SET( THIS_LIBS
     IECoreArnold
     IECorePython
     ${CORTEX_ARNOLD_LIBS}
     ${Boost_LIBRARIES} )

ADD_LIBRARY( arnoldProcedural MODULE ${SOURCE_FILES} )

SET_TARGET_PROPERTIES( arnoldProcedural PROPERTIES OUTPUT_NAME ieProcedural )
SET_TARGET_PROPERTIES( arnoldProcedural PROPERTIES PREFIX "" )

TARGET_LINK_LIBRARIES( arnoldProcedural ${THIS_LIBS} )

INSTALL( TARGETS arnoldProcedural
         LIBRARY DESTINATION arnold/procedurals )
